Added link to learn more

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/main.css"  media="screen,projection"/>
   </head>
-  <body class="blue darken-3">
+  <body class="blue darken-2">
     <div class="grey darken-4" id="app">
       <nav>
         <div class="nav-wrapper deep-purple accent-4">
@@ -29,10 +29,10 @@
           </div>
         </div>
       </div>
-      <div class="row blue darken-3 white-text">
+      <div class="row blue darken-2 white-text">
         <div class="container">
           <div class="content hero col s12 m8 offset-m2">
-            <div class="lead"><span>Get smart</span> by learning more about listing
+            <div class="lead"><span>Get smart</span> by <a href="https://www.publish0x.com/blockchain-research-and-development/building-a-decentralized-private-web-based-marketplace-on-za-xgpdkyr" target="_blank">learning</a> more about listing
               with Zano Life.
             </div>
             <div class="lead" style="margin-top: 15px;"><span>Get started</span> by registering an account,
